--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Arkom also offers a spectrum of services in partnership with business enablers and coordination with centers of excellence. These partnerships help us bring together products and services that simplify processes for our clients and partners.
+                        Arkom also offers a spectrum of services in partnership with business enablers and coordination with centers of excellence. 
                     </p>
                 </div>
             </div>
