--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,9 @@
                                 <a href="index.html/#services" class="dropdown-toggle" data-toggle="dropdown" role="button">Services<span class="caret"></span></a>
                                
                             </li>
+							<li class="dropdown active">
+                                <a href="index.html/#team" class="dropdown-toggle" data-toggle="dropdown" role="button">Team<span class="caret"></span></a>
+                            </li>
                             <li class="dropdown active">
                                 <a href="index.html/#careers" class="dropdown-toggle" data-toggle="dropdown" role="button">Careers<span class="caret"></span></a>
                             </li>
