--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
                                 </li>
 								
-								
+                                <li class="dropdown">
+                                    <a href="#team" class="dropdown-toggle" data-toggle="dropdown" role="button">Team</a>
+                                </li>								
                                 <li class="dropdown">
                                     <a href="#careers" class="dropdown-toggle" data-toggle="dropdown" role="button">Careers</a>
                                 </li>
@@ -169,10 +171,10 @@
         </div>
     </div>
     <div class="section-empty">
-        <div class="container content" id="about">
+        <div class="container content">
             <div class="row">
                 <div class="col-md-6">
-                    <h2>
+                    <h2 id="about">
                         About Arkom
                     </h2>
                     <p>
@@ -244,7 +246,7 @@
         <div class="container content">
             <div class="row vertical-row">
                 <div class="col-md-6 text-left-xs">
-                    <h2 class="text-color">Careers at Arkom</h2>
+                    <h2 class="text-color" id="careers">Careers at Arkom</h2>
                     <p>
                         Arkom is always on the lookout for offering internships and jobs to fresh graduates and experienced professionals alike.
 						We are also keen on developing partnerships and joint ventures with aspirational organisations. Connect with us to explore opportunities.
@@ -282,8 +284,8 @@
         </div>
     </div>
     <div class="section-empty">
-        <div class="container content" id="services">
-            <h2 class="text-center text-left-xs">OUR SERVICES</h2>
+        <div class="container content">
+            <h2 class="text-center text-left-xs" id="services">OUR SERVICES</h2>
             <hr class="space" />
             <div class="row">
                 <div class="col-md-4">
@@ -540,7 +542,7 @@
     </div>
     <div class="section-empty">
         <div class="content container">
-            <h2 class="text-center text-left-xs">
+            <h2 class="text-center text-left-xs" id="team">
                 Our executive team
             </h2>
             <p class="width-650 text-center text-left-xs">
@@ -673,7 +675,7 @@
                     <div class="footer-menu text-s">
                         <a href="#about">ABOUT US</a>
                         <a href="#services">SERVICES</a>
-                        <a href="#clients">CLIENTS</a>
+                        <a href="#careers">CLIENTS</a>
                         <a href="#contact">CONTACT</a>
                     </div>
                 </div>
