--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,18 @@
 
                             </li>
                             <li class="dropdown">
-                                <a href="index.html/#about" class="dropdown-toggle" data-toggle="dropdown" role="button">About <span class="caret"></span></a>
+                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button">About <span class="caret"></span></a>
   
                             </li>
                             <li class="dropdown">
-                                <a href="index.html/#services" class="dropdown-toggle" data-toggle="dropdown" role="button">Services<span class="caret"></span></a>
+                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Services<span class="caret"></span></a>
                                
                             </li>
 							<li class="dropdown active">
-                                <a href="index.html/#team" class="dropdown-toggle" data-toggle="dropdown" role="button">Team<span class="caret"></span></a>
+                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Team<span class="caret"></span></a>
                             </li>
                             <li class="dropdown active">
-                                <a href="index.html/#careers" class="dropdown-toggle" data-toggle="dropdown" role="button">Careers<span class="caret"></span></a>
+                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Careers<span class="caret"></span></a>
                             </li>
 					        <li class="dropdown active">
                                 <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button">Contact<span class="caret"></span></a>
