--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-md-6 text-center text-left-xs">
                     <hr class="space visible-xs" />
-                    <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/M2ByJnesS6Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video <i></i></a>
+                    <a href="./images/logo.mp4" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video <i></i></a>
                 </div>
             </div>
             <hr class="space" />
