--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arkom Engineering Consultants</title>
-    <meta name="description" content="Multipurpose HTML template.">
+    <meta name="description" content="On-stop shop for engineering solutions">
     <link rel="stylesheet" href="./HTWF/scripts/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./HTWF/style.css">
     <link rel="stylesheet" href="./HTWF/css/content-box.css">
