--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contacts | 3 | Lightflow</title>
-    <meta name="description" content="Contacts page classic with contact form in HTML.">
+    <title>Contact</title>
+    <meta name="description" content="Reach out to us">
     <link rel="stylesheet" href="./HTWF/scripts/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./HTWF/style.css">
     <link rel="stylesheet" href="./HTWF/css/animations.css">
