--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                             </a>
                             <div class="content-box">
                                 <h2>JANARTHANAM GIRIVASAN</h2>
-                                <h4>Director - Engineering</h4>
+                                <h4>Director - Operations</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
                                     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
@@ -576,7 +576,7 @@
                             </a>
                             <div class="content-box">
                                 <h2>SESHADRI PUNDI</h2>
-                                <h4>Director - Operations</h4>
+                                <h4>Director - Engineering</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
                                     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
@@ -594,7 +594,7 @@
                             </a>
                             <div class="content-box">
                                 <h2>NAGARJUNA REDDY</h2>
-                                <h4>Director - Admin</h4>
+                                <h4>Director - Administration</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
                                     <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
