--- a/index.html
+++ b/index.html
@@ -561,9 +561,8 @@
                                 <h4>Director - Operations</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
-                                    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/janarthanam.girivasan"><i class="fa fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.linkedin.com/in/giri-jana-6a57b229/"><i class="fa fa-linkedin"></i></a>
                                 </div>
                                 <p>30+ years experience in commissioning and operations</p>
                             </div>
@@ -579,9 +578,8 @@
                                 <h4>Director - Engineering</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
-                                    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/seshadri.pundi"><i class="fa fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.linkedin.com/in/pundi-seshadri-work-email-75132583/"><i class="fa fa-linkedin"></i></a>
                                 </div>
                                 <p>35+ years experience in project management</p>
                             </div>
@@ -597,9 +595,8 @@
                                 <h4>Director - Administration</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
-                                    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/buddala.nagarjuna"><i class="fa fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.linkedin.com/in/bnagarjunareddy/"><i class="fa fa-linkedin"></i></a>
                                 </div>
                                 <p>30+ years experience in pipeline engineering</p>
                             </div>
@@ -615,9 +612,10 @@
                                 <h4>Director - Business Development</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
-                                    <a target="_blank" href="#"><i class="fa fa-facebook"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
-                                    <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
+                                    <a target="_blank" href="https://www.facebook.com/aditya.kesanupalli"><i class="fa fa-facebook"></i></a>
+                                    <a target="_blank" href="https://www.linkedin.com/in/aditya-kesanupalli-69984b122/"><i class="fa fa-linkedin"></i></a>
+									<a target="_blank" href="https://twitter.com/anotheraditya"><i class="fa fa-twitter"></i></a>
+									<a target="_blank" href="https://instagram.com/adityakesanupalli"><i class="fa fa-instagram"></i></a>
                                 </div>
                                 <p>10+ years of experience in business development</p>
                             </div>
@@ -645,16 +643,10 @@
                     </p>
                     <hr class="space s" />
                     <div class="btn-group social-group btn-group-icons">
-                        <a target="_blank" href="#" data-social="share-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
+                        <a target="_blank" href="https://www.facebook.com/arkomec/" title="Facebook">
                             <i class="fa fa-facebook text-s circle"></i>
                         </a>
-                        <a target="_blank" href="#" data-social="share-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-                            <i class="fa fa-twitter text-s circle"></i>
-                        </a>
-                        <a target="_blank" href="#" data-social="share-google" data-toggle="tooltip" data-placement="top" title="Google+">
-                            <i class="fa fa-google-plus text-s circle"></i>
-                        </a>
-                        <a target="_blank" href="#" data-social="share-linkedin" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                        <a target="_blank" href="https://www.linkedin.com/company/arkomec/" title="LinkedIn">
                             <i class="fa fa-linkedin text-s circle"></i>
                         </a>
                     </div>
