--- a/contact.html
+++ b/contact.html
@@ -170,17 +170,11 @@
                         Arkom Engineering Consultants is a Private Limited Company registered in Chennai with GST No: 33AAPCA4264J1ZH
                     </p>
                     <hr class="space s" />
-                    <div class="btn-group social-group btn-group-icons">
-                        <a target="_blank" href="#" data-social="share-facebook" data-toggle="tooltip" data-placement="top" title="Facebook">
+                           <div class="btn-group social-group btn-group-icons">
+                        <a target="_blank" href="https://www.facebook.com/arkomec/" title="Facebook">
                             <i class="fa fa-facebook text-s circle"></i>
                         </a>
-                        <a target="_blank" href="#" data-social="share-twitter" data-toggle="tooltip" data-placement="top" title="Twitter">
-                            <i class="fa fa-twitter text-s circle"></i>
-                        </a>
-                        <a target="_blank" href="#" data-social="share-google" data-toggle="tooltip" data-placement="top" title="Google+">
-                            <i class="fa fa-google-plus text-s circle"></i>
-                        </a>
-                        <a target="_blank" href="#" data-social="share-linkedin" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                        <a target="_blank" href="https://www.linkedin.com/company/arkomec/" title="LinkedIn">
                             <i class="fa fa-linkedin text-s circle"></i>
                         </a>
                     </div>
