--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-md-6 text-center text-left-xs">
                     <hr class="space visible-xs" />
-                    <a href="./images/logo.mp4" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
+                    <a href="https://www.youtube.com/watch?v=M2ByJnesS6Y" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
                 </div>
             </div>
             <hr class="space" />
