--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-md-6 text-center text-left-xs">
                     <hr class="space visible-xs" />
-                    <a href="https://www.youtube.com/watch?v=M2ByJnesS6Y" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
+                    <a href="logo.mp4" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
                 </div>
             </div>
             <hr class="space" />
@@ -575,7 +575,7 @@
                             </a>
                             <div class="content-box">
                                 <h2>SESHADRI PUNDI</h2>
-                                <h4>Director - Engineering</h4>
+                                <h4>Director - Projects</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
                                     <a target="_blank" href="https://www.facebook.com/seshadri.pundi"><i class="fa fa-facebook"></i></a>
@@ -592,7 +592,7 @@
                             </a>
                             <div class="content-box">
                                 <h2>NAGARJUNA REDDY</h2>
-                                <h4>Director - Administration</h4>
+                                <h4>Director - Engineering</h4>
                                 <hr class="e" />
                                 <div class="btn-group social-group">
                                     <a target="_blank" href="https://www.facebook.com/buddala.nagarjuna"><i class="fa fa-facebook"></i></a>
