--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                     </div>
                     <hr class="space m" />
                     <p class="text-left-xs">
-                        Our team posseses a wide experience in on-shore and off-shore oil and gas engineering, maintenance of power plants, and fabrication of training skids.
+                        We are a Private Limited Company based out of Chennai, with a wide experience in oil and gas engineering, maintenance of power plants, and fabrication of training skids.
                     </p>
                 </div>
                 <div class="col-md-6 text-center text-left-xs">
                     <hr class="space visible-xs" />
-                    <a href="logo.mp4" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
+                    <a href="https://www.youtube.com/5diXZNNDc3s?rel=0" data-lightbox-anima="fade-right" class="btn btn-lg btn-play text-color lightbox mfp-iframe">Watch video<i></i></a>
                 </div>
             </div>
             <hr class="space" />
@@ -181,7 +181,7 @@
                         Our team of experts in the areas of engineering, management and construction bring you the insight and advice you need for your project.
                     </p>
                     <ul class="fa-ul text-s ul-dots">
-                        <li>Established by experts from the oil and gas industry</li>
+                        <li>Private Limited company established by experts from the oil & gas industry</li>
                         <li>Aims to bridge the gap between industry and institutes</li>
                         <li>Affordable integrated services in times of a volatile market</li>
                     </ul>
