--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="navbar-mini scroll-hide">
                 <div class="container">
                     <div class="nav navbar-nav navbar-left">
-                        <span>+91 9176 333 857</span>
+                        <span>+91 94444 24919</span>
                         <hr />
                         <span>admin@arkom.in</span>
                         <hr />
@@ -658,7 +658,7 @@
                         <li>J3, Tandalam, Kovur</li>
                         <li>Chennai - 600122</li>
                         <li>admin@arkom.in</li>
-                        <li>+91 9176 333 857</li>
+                        <li>+91 94444 24919</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
